--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
   </header>
 
   <main>
-    <section id="about">
-      <h2>About This Site</h2>
+    <section id="Eat">
+      <h2>Food/Kritik</h2>
       <p>This is a minimalist, futuristic website built with HTML and hosted on GitHub Pages.</p>
       <img src="https://placehold.co/600x300?text=Future+Image" alt="Futuristic Image">
     </section>
 
-    <section id="projects">
-      <h2>My Projects</h2>
+    <section id="Art">
+      <h2>Kunst</h2>
       <p>Here you can showcase cool things you’re working on, links to GitHub repos, or experiments.</p>
     </section>
 
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <p>Feel free to <a href="mailto:yourname@example.com" style="color:#00ffe0;">send me an email</a> or connect on GitHub.</p>
+    <section id="Anarchy">
+      <h2>Manifestationen</h2>
+      <p>Kunsttheorie, Anarchosyndikalismus Platzhalter</p>
     </section>
   </main>
 
