--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Future Website</title>
+  <title>EatArtAnarchy</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -69,7 +69,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to the Future</h1>
+    <h1>Eat Art Anarchy</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
@@ -79,13 +79,13 @@
 
   <main>
     <section id="Eat">
-      <h2>Food/Kritik</h2>
+      <h2>Impressionen</h2>
       <p>This is a minimalist, futuristic website built with HTML and hosted on GitHub Pages.</p>
       <img src="https://placehold.co/600x300?text=Future+Image" alt="Futuristic Image">
     </section>
 
     <section id="Art">
-      <h2>Kunst</h2>
+      <h2>Expressionen</h2>
       <p>Here you can showcase cool things you’re working on, links to GitHub repos, or experiments.</p>
     </section>
 
