--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
   <header>
     <h1>Eat Art Anarchy</h1>
     <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+  <a href="impressions.html">Impressions</a>
+  <a href="expressions.html">Expressions</a>
+  <a href="manifestations.html">Manifestations</a>
     </nav>
+
   </header>
 
   <main>
