--- a/expressions.html
+++ b/expressions.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Impressions – Eat Art Anarchy</title>
+  <title>Expressions – Eat Art Anarchy</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -71,10 +71,10 @@
   </header>
 
   <main>
-    <h2>Impressions</h2>
+    <h2>Expressions</h2>
 
     <article>
-      <h3>First Impression</h3>
+      <h3>First Expression</h3>
       <p>This is the first post in the Impressions section. It contains some text and a picture.</p>
       <img src="https://placehold.co/600x300?text=Impression+Image" alt="Placeholder Image">
     </article>
