--- a/index.html
+++ b/index.html
@@ -1,103 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EatArtAnarchy</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-  <style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Eat Art Anarchy</title>
+<style>
     body {
-      margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: #ffffff;
+        margin: 0;
+        padding: 0;
+        background-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        flex-direction: column;
+        font-family: Arial, sans-serif;
     }
 
-    header {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 1rem 2rem;
-      text-align: center;
-      border-bottom: 2px solid #00ffe0;
+    .image-container {
+        position: relative;
+        width: 300px;
+        height: 200px;
+        margin: 20px 0;
+        overflow: hidden;
+        cursor: pointer;
     }
 
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-      color: #00ffe0;
+    .image-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform 0.5s ease;
+        display: block;
     }
 
-    nav {
-      margin-top: 0.5rem;
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.6);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: opacity 0.5s ease;
+        color: gold;
+        font-size: 1.5rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 2px;
     }
 
-    nav a {
-      margin: 0 1rem;
-      color: #ffffff;
-      text-decoration: none;
-      font-weight: bold;
+    .image-container:hover img {
+        transform: scale(1.05);
     }
 
-    nav a:hover {
-      color: #00ffe0;
+    .image-container:hover .overlay {
+        opacity: 1;
     }
 
-    main {
-      max-width: 800px;
-      margin: 3rem auto;
-      padding: 0 2rem;
-      text-align: center;
+    a {
+        text-decoration: none;
+        color: inherit;
     }
-
-    section {
-      margin-bottom: 2rem;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      border-top: 1px solid #444;
-      font-size: 0.9rem;
-      color: #ccc;
-    }
-
-    img {
-      max-width: 100%;
-      border-radius: 10px;
-      margin-top: 1rem;
-    }
-  </style>
+</style>
 </head>
 <body>
-  <header>
-    <h1>Eat Art Anarchy</h1>
-    <nav>
-  <a href="impressions.html">Impressions</a>
-  <a href="expressions.html">Expressions</a>
-  <a href="manifestations.html">Manifestations</a>
-    </nav>
 
-  </header>
+    <a href="impressions.html">
+        <div class="image-container">
+            <img src="https://placehold.co/600x400?text=Impressions" alt="Impressions">
+            <div class="overlay">Impressions</div>
+        </div>
+    </a>
 
-  <main>
-    <section id="Eat">
-      <h2>Impressionen</h2>
-      <p>This is a minimalist, futuristic website built with HTML and hosted on GitHub Pages.</p>
-      <img src="https://placehold.co/600x300?text=Future+Image" alt="Futuristic Image">
-    </section>
+    <a href="expressions.html">
+        <div class="image-container">
+            <img src="https://placehold.co/600x400?text=Expressions" alt="Expressions">
+            <div class="overlay" style="color:white;">Expressions</div>
+        </div>
+    </a>
 
-    <section id="Art">
-      <h2>Expressionen</h2>
-      <p>Here you can showcase cool things you’re working on, links to GitHub repos, or experiments.</p>
-    </section>
+    <a href="manifestations.html">
+        <div class="image-container">
+            <img src="https://placehold.co/600x400?text=Manifestations" alt="Manifestations">
+            <div class="overlay">Manifestations</div>
+        </div>
+    </a>
 
-    <section id="Anarchy">
-      <h2>Manifestationen</h2>
-      <p>Kunsttheorie, Anarchosyndikalismus Platzhalter</p>
-    </section>
-  </main>
-
-  <footer>
-    © 2025 Your Name — Powered by GitHub Pages
-  </footer>
 </body>
 </html>
