--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
 
     <a href="impressions.html">
         <div class="image-container">
-            <img src="https://placehold.co/600x400?text=Impressions" alt="Impressions">
+            <img src="b009cfb7-85d2-4618-9e14-894f3ac9bee7.jpg" alt="Impressions">
             <div class="overlay">Impressions</div>
         </div>
     </a>
 
     <a href="expressions.html">
         <div class="image-container">
-            <img src="https://placehold.co/600x400?text=Expressions" alt="Expressions">
+            <img src="b009cfb7-85d2-4618-9e14-894f3ac9bee7.jpg" alt="Expressions">
             <div class="overlay" style="color:white;">Expressions</div>
         </div>
     </a>
 
     <a href="manifestations.html">
         <div class="image-container">
-            <img src="https://placehold.co/600x400?text=Manifestations" alt="Manifestations">
+            <img src="b009cfb7-85d2-4618-9e14-894f3ac9bee7.jpg" alt="Manifestations">
             <div class="overlay">Manifestations</div>
         </div>
     </a>
