--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         align-items: center;
         opacity: 0;
         transition: opacity 0.5s ease;
-        color: gold;
+        color: white;
         font-size: 1.5rem;
         font-weight: bold;
         text-transform: uppercase;
