--- a/Nobelhart&Schmutzig.html
+++ b/Nobelhart&Schmutzig.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Blog Post 1</title>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-color: black;
+        font-family: Arial, sans-serif;
+        color: white;
+        line-height: 1.6;
+        background-image: url("data:image/svg+xml,%3Csvg width='400' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' stroke='%23ffffff' stroke-width='0.5'%3E%3Cpath d='M0 50 L400 50 M0 100 L400 100 M0 150 L400 150 M0 200 L400 200 M0 250 L400 250 M0 300 L400 300 M0 350 L400 350 M50 0 L50 400 M100 0 L100 400 M150 0 L150 400 M200 0 L200 400 M250 0 L250 400 M300 0 L300 400 M350 0 L350 400' /%3E%3C/svg%3E");
+        background-size: cover;
+        background-blend-mode: overlay;
+    }
+
+    header {
+        text-align: center;
+        padding: 2rem;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    header h1 {
+        font-size: 2.5rem;
+        color: gold;
+        margin-bottom: 0.5rem;
+    }
+
+    header p {
+        font-size: 0.9rem;
+        color: rgba(255, 255, 255, 0.7);
+    }
+
+    main {
+        max-width: 800px;
+        margin: 2rem auto;
+        padding: 0 1rem;
+    }
+
+    main img {
+        max-width: 100%;
+        margin: 1rem 0;
+        border-radius: 8px;
+    }
+
+    footer {
+        text-align: center;
+        padding: 2rem;
+        font-size: 0.8rem;
+        color: rgba(255, 255, 255, 0.6);
+        border-top: 1px solid rgba(255, 255, 255, 0.2);
+        margin-top: 3rem;
+    }
+</style>
+</head>
+<body>
+
+<header>
+    <h1>The First Blog Post</h1>
+    <p>Published on August 15, 2025</p>
+</header>
+
+<main>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet turpis nec purus tincidunt suscipit. Proin ornare, justo eget vestibulum fringilla, lectus velit malesuada justo, vel tempor justo felis at lacus. Suspendisse id neque ac augue varius finibus.</p>
+
+    <img src="https://placehold.co/800x400?text=Blog+Image+1" alt="Blog Example Image">
+
+    <p>Curabitur nec pharetra elit, nec ullamcorper turpis. Aliquam erat volutpat. Duis sed eros sed neque luctus finibus. Sed fringilla, metus in viverra pretium, augue sapien imperdiet sapien, in interdum velit elit sit amet ligula.</p>
+
+    <img src="https://placehold.co/800x400?text=Blog+Image+2" alt="Another Blog Image">
+
+    <p>Fusce non libero non orci vestibulum scelerisque at eget nisl. Vivamus finibus mi at ligula consectetur, ac vehicula sapien ullamcorper.</p>
+</main>
+
+<footer>
+    &copy; 2025 Eat Art Anarchy — All Rights Reserved
+</footer>
+
+</body>
+</html>
 
