--- a/impressions.html
+++ b/impressions.html
@@ -77,7 +77,7 @@
 </head>
 <body>
 
-    <a href="Nobelhart&Schmutzig.html">
+    <a href="NobelhartundSchmutzig.html">
         <div class="image-container">
             <img src="b009cfb7-85d2-4618-9e14-894f3ac9bee7.jpg" alt="Nobelhart&Schmutzig">
             <div class="overlay">Blog 1 Title</div>
