--- a/NobelhartundSchmutzig.html
+++ b/NobelhartundSchmutzig.html
@@ -12,7 +12,7 @@
         font-family: Arial, sans-serif;
         color: white;
         line-height: 1.6;
-        background-image: url("data:image/svg+xml,%3Csvg width='400' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' stroke='%23ffffff' stroke-width='0.5'%3E%3Cpath d='M0 50 L400 50 M0 100 L400 100 M0 150 L400 150 M0 200 L400 200 M0 250 L400 250 M0 300 L400 300 M0 350 L400 350 M50 0 L50 400 M100 0 L100 400 M150 0 L150 400 M200 0 L200 400 M250 0 L250 400 M300 0 L300 400 M350 0 L350 400' /%3E%3C/svg%3E");
+        background-image: url("data:image/svg+xml,%3Csvg width='600' height='600' xmlns='http://www.w3.org/2000/svg'%3E%3Cg stroke='%23ffffff' stroke-width='0.5' fill='none'%3E%3Cpath d='M0 0 L600 600 M0 600 L600 0 M300 0 L300 600 M0 300 L600 300 M150 0 L450 600 M450 0 L150 600 M0 150 L600 450 M0 450 L600 150 M75 0 L525 600 M525 0 L75 600'/%3E%3C/g%3E%3C/svg%3E");
         background-size: cover;
         background-blend-mode: overlay;
     }
@@ -81,4 +81,3 @@
 
 </body>
 </html>
-
