--- a/NobelhartundSchmutzig.html
+++ b/NobelhartundSchmutzig.html
@@ -25,7 +25,7 @@
 
     header h1 {
         font-size: 2.5rem;
-        color: gold;
+        color: white;
         margin-bottom: 0.5rem;
     }
 
