--- a/NobelhartundSchmutzig.html
+++ b/NobelhartundSchmutzig.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Blog Post 1</title>
+<title>Nobelhart&Schmutzig</title>
 <style>
     body {
         margin: 0;
@@ -59,8 +59,8 @@
 <body>
 
 <header>
-    <h1>The First Blog Post</h1>
-    <p>Published on August 15, 2025</p>
+    <h1>Nobelhart&Schmutzig</h1>
+    <p>...here the journey begins</p>
 </header>
 
 <main>
