--- a/impressions.html
+++ b/impressions.html
@@ -80,7 +80,7 @@
     <a href="NobelhartundSchmutzig.html">
         <div class="image-container">
             <img src="b009cfb7-85d2-4618-9e14-894f3ac9bee7.jpg" alt="Nobelhart&Schmutzig">
-            <div class="overlay">Nobelhart&Schmutzig</div>
+           <div class="overlay">Nobelhart<br>&Schmutzig</div>
         </div>
     </a>
 
