--- a/NobelhartundSchmutzig.html
+++ b/NobelhartundSchmutzig.html
@@ -66,7 +66,7 @@
 <main>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet turpis nec purus tincidunt suscipit. Proin ornare, justo eget vestibulum fringilla, lectus velit malesuada justo, vel tempor justo felis at lacus. Suspendisse id neque ac augue varius finibus.</p>
 
-    <img src="https://placehold.co/800x400?text=Blog+Image+1" alt="Blog Example Image">
+    <img src="assets/images/e75f84c9-f695-425e-9ec5-1394aee15b28.jpg">
 
     <p>Curabitur nec pharetra elit, nec ullamcorper turpis. Aliquam erat volutpat. Duis sed eros sed neque luctus finibus. Sed fringilla, metus in viverra pretium, augue sapien imperdiet sapien, in interdum velit elit sit amet ligula.</p>
 
