--- a/NobelhartundSchmutzig.html
+++ b/NobelhartundSchmutzig.html
@@ -68,9 +68,9 @@
 
     <img src="assets/images/e75f84c9-f695-425e-9ec5-1394aee15b28.jpg">
 
-    <p>Curabitur nec pharetra elit, nec ullamcorper turpis. Aliquam erat volutpat. Duis sed eros sed neque luctus finibus. Sed fringilla, metus in viverra pretium, augue sapien imperdiet sapien, in interdum velit elit sit amet ligula.</p>
+    <img src="assets/images/e75f84c9-f695-425e-9ec5-1394aee15b28.jpg">
 
-    <img src="https://placehold.co/800x400?text=Blog+Image+2" alt="Another Blog Image">
+    <img src="assets/images/e3677d07-b59e-4430-b09f-cf29eb9acc3f.jpg">
 
     <p>Fusce non libero non orci vestibulum scelerisque at eget nisl. Vivamus finibus mi at ligula consectetur, ac vehicula sapien ullamcorper.</p>
 </main>
