--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,94 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact — Eat Art Anarchy</title>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-color: black;
+        font-family: Arial, sans-serif;
+        color: white;
+        opacity: 0; /* For fade-in */
+        animation: fadeIn 1s ease-in forwards;
+    }
+
+    @keyframes fadeIn {
+        to { opacity: 1; }
+    }
+
+    header {
+        text-align: center;
+        padding: 2rem;
+    }
+
+    header h1 {
+        font-size: 2.5rem;
+        color: gold;
+        margin-bottom: 0.5rem;
+    }
+
+    .contact-container {
+        max-width: 500px;
+        margin: 2rem auto;
+        padding: 1.5rem;
+        background-color: rgba(255, 255, 255, 0.05);
+        border-radius: 10px;
+        box-shadow: 0 0 15px rgba(255, 215, 0, 0.2);
+        text-align: center;
+    }
+
+    .contact-container p {
+        font-size: 1rem;
+        color: rgba(255, 255, 255, 0.8);
+        margin-bottom: 1.5rem;
+    }
+
+    .contact-btn {
+        display: inline-block;
+        padding: 0.8rem 1.4rem;
+        background-color: gold;
+        color: black;
+        font-size: 1rem;
+        font-weight: bold;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    .contact-btn:hover {
+        background-color: #ffda6a;
+        transform: scale(1.05);
+    }
+
+    footer {
+        text-align: center;
+        padding: 2rem;
+        font-size: 0.8rem;
+        color: rgba(255, 255, 255, 0.6);
+        border-top: 1px solid rgba(255, 255, 255, 0.2);
+        margin-top: 3rem;
+    }
+</style>
+</head>
+<body>
+
+<header>
+    <h1>Contact</h1>
+    <p>Interested in a painting? Get in touch with us.</p>
+</header>
+
+<div class="contact-container">
+    <p>We’d love to hear from you! Click the button below to send us an email.</p>
+    <a href="mailto:holunderbuschfee@protonmail.com" class="contact-btn">Email Us</a>
+</div>
+
+<footer>
+    &copy; 2025 Eat Art Anarchy — All Rights Reserved
+</footer>
+
+</body>
+</html>
 
