--- a/expressions.html
+++ b/expressions.html
@@ -108,7 +108,7 @@
 </div>
 
 <div class="gallery">
-    <h2>Urban Stories</h2>
+    <h2>Urban Loneliness</h2>
     <div class="grid">
         <img src="assets/images/expressions/urban1.jpg" alt="Urban Art 1">
         <img src="assets/images/expressions/urban2.jpg" alt="Urban Art 2">
@@ -118,7 +118,7 @@
 </div>
 
 <div class="gallery">
-    <h2>Nature’s Colors</h2>
+    <h2>Nature’s Fears</h2>
     <div class="grid">
         <img src="assets/images/expressions/nature1.jpg" alt="Nature Painting 1">
         <img src="assets/images/expressions/nature2.jpg" alt="Nature Painting 2">
