--- a/manifestations.html
+++ b/manifestations.html
@@ -81,28 +81,23 @@
 <div class="blog-container">
 
     <div class="blog-post">
-        <h2>The Chaos Principle in Abstract Expressionism</h2>
+        <h2>The Chaos</h2>
         <p>
-            Abstract Expressionism thrives on spontaneity and unpredictability.
-            In this piece, we explore how chaos doesn’t mean the absence of order,
-            but rather a deeper, hidden structure that the artist uncovers during creation.
+            ---
         </p>
     </div>
 
     <div class="blog-post">
-        <h2>The Alchemy of Color</h2>
+        <h2>The Alchemy</h2>
         <p>
-            Colors interact like elements in an alchemist’s crucible.
-            By mixing, layering, and contrasting pigments, artists can create emotional reactions
-            that bypass rational thought and speak directly to the subconscious.
+         ---
         </p>
     </div>
 
     <div class="blog-post">
-        <h2>Time as a Medium</h2>
+        <h2>Time</h2>
         <p>
-            What if art wasn’t static? We examine installations and performances
-            that use time itself as a creative ingredient — evolving and decaying in real-time.
+    ---
         </p>
     </div>
 
