--- a/manifestations.html
+++ b/manifestations.html
@@ -34,7 +34,7 @@
 
     header h1 {
         font-size: 2.5rem;
-        color: gold;
+        color: white;
         margin-bottom: 0.5rem;
     }
 
@@ -52,7 +52,7 @@
     }
 
     .blog-post h2 {
-        color: gold;
+        color: white;
         margin-bottom: 0.5rem;
     }
 
