--- a/expressions.html
+++ b/expressions.html
@@ -64,7 +64,7 @@
         display: inline-block;
         margin-top: 1rem;
         padding: 0.6rem 1.2rem;
-        background-color: gold;
+        background-color: white;
         color: black;
         border: none;
         border-radius: 5px;
