--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
     header h1 {
         font-size: 2.5rem;
-        color: gold;
+        color: white;
         margin-bottom: 0.5rem;
     }
 
@@ -49,7 +49,7 @@
     .contact-btn {
         display: inline-block;
         padding: 0.8rem 1.4rem;
-        background-color: gold;
+        background-color: white;
         color: black;
         font-size: 1rem;
         font-weight: bold;
