--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             <div class="overlay">Manifestations</div>
         </div>
     </a>
-
+<div style="text-align:center; margin-top:20px;">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=1234567&style=0006&nbdigits=5&type=page&initCount=0" 
+         title="Web Counter" 
+         alt="web counter">
+  </div>
 </body>
 </html>
