--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         </div>
     </a>
 <div style="text-align:center; margin-top:20px;">
-    <img src="https://hitwebcounter.com/counter/counter.php?page=1234567&style=0006&nbdigits=5&type=page&initCount=0" 
-         title="Web Counter" 
-         alt="web counter">
+   <!-- hitwebcounter Code START -->
+    <a href="https://www.hitwebcounter.com" target="_blank">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=21435428&style=0006&nbdigits=6&type=page&initCount=0" title="PDF TO WORD" Alt="PDF File Conversion"   border="0" /></a>    
   </div>
 </body>
 </html>
