--- a/NobelhartundSchmutzig.html
+++ b/NobelhartundSchmutzig.html
@@ -66,7 +66,7 @@
 <main>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet turpis nec purus tincidunt suscipit. Proin ornare, justo eget vestibulum fringilla, lectus velit malesuada justo, vel tempor justo felis at lacus. Suspendisse id neque ac augue varius finibus.</p>
 
-    <img src="assets/images/e75f84c9-f695-425e-9ec5-1394aee15b28.jpg">
+    <img src="assets/images/assets/images/ChatGPT Image 3. Jan. 2026, 14_13_26.png">
 
     <img src="assets/images/7caaee96-ffc6-49a5-850c-426b21fc8f85.jpg">
 
