--- a/NobelhartundSchmutzig.html
+++ b/NobelhartundSchmutzig.html
@@ -68,7 +68,7 @@
 
     <img src="assets/images/ChatGPT Image 3. Jan. 2026, 15_18_14.jpg">
 
-    <img src="assets/images/7caaee96-ffc6-49a5-850c-426b21fc8f85.jpg">
+    <img src="assets/images/ChatGPT Image 3. Jan. 2026, 15_19_57.jpg">
 
     <img src="assets/images/e3677d07-b59e-4430-b09f-cf29eb9acc3f.jpg">
 
