--- a/NobelhartundSchmutzig.html
+++ b/NobelhartundSchmutzig.html
@@ -70,7 +70,7 @@
 
     <img src="assets/images/ChatGPT Image 3. Jan. 2026, 15_19_57.jpg">
 
-    <img src="assets/images/e3677d07-b59e-4430-b09f-cf29eb9acc3f.jpg">
+    <img src="assets/images/ChatGPT Image 3. Jan. 2026, 15_22_31.jpg">
 
     <p>Fusce non libero non orci vestibulum scelerisque at eget nisl. Vivamus finibus mi at ligula consectetur, ac vehicula sapien ullamcorper.</p>
 </main>
